vm_version_x86.hpp should not include globals_extension.hpp

XMLWordPrintable

    • b17

      vm_version_x86.hpp is a popular header file (which in itself is a problem but I'll fix that in a separate RFE) and it unnecessarily includes globals_extension.hpp.

      Removing this dependency reduces the number of files that includes globals_extension.hpp from 814 to 67.

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: