8253271: vm_version_x86.hpp should not include globals_extension.hpp